--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,20 +8,15 @@ concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 jobs:
-  cargo:
+  go:
     runs-on: ubuntu-latest
     environment: ${{ github.ref == 'refs/heads/main' && 'release' || 'test' }}
     steps:
       - uses: actions/checkout@v4
-      - uses: raviqqe/cargo-cache@v1
-      - run: cargo install cargo-workspaces
-      - run: cargo workspaces publish -y --from-git
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        if: github.ref == 'refs/heads/main'
+      - run: echo
   release:
     needs:
-      - cargo
+      - go
     if: always()
     runs-on: ubuntu-latest
     steps:
