--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,6 +8,10 @@ updates:
     directory: /
     schedule:
       interval: daily
+  - package-ecosystem: gitmodule
+    directory: /
+    schedule:
+      interval: daily
   - package-ecosystem: gomod
     directory: /
     schedule:
