--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+      - uses: actions/setup-go@v3
       - uses: ruby/setup-ruby@v1
       - run: go install .
       - run: ${{ matrix.dependent.build }}
