--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,7 +8,7 @@ updates:
     directory: /
     schedule:
       interval: daily
-  - package-ecosystem: gitmodule
+  - package-ecosystem: gitsubmodule
     directory: /
     schedule:
       interval: daily
