--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,12 +46,10 @@ jobs:
       - uses: actions/setup-go@v5
       - uses: ruby/setup-ruby@v1
       - run: go install ./cmd/aruba
-      - run: echo PATH=$(go env $GOPATH/bin):$PATH >> ${{ github.env }}
-      - run: which aruba
+      - run: echo PATH=$(go env GOPATH)/bin:$PATH >> ${{ github.env }}
       - run: ${{ matrix.dependent.build }}
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: bundler
-      - run: which aruba
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
