--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
+      - run: which aruba
       - run: ${{ matrix.dependent.environment }} aruba
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
