--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,16 +44,17 @@ jobs:
         with:
           submodules: true
       - uses: actions/setup-go@v5
+        with:
+          go-version: stable
       - uses: ruby/setup-ruby@v1
       - run: go install ./cmd/aruba
-      - run: echo PATH=$(go env $GOPATH/bin):$PATH >> ${{ github.env }}
       - run: ${{ matrix.dependent.build }}
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: bundler
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.dependent.environment }} aruba
+      - run: ${{ matrix.dependent.environment }} $(go env GOPATH)/bin/aruba
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
