--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - run: bundler exec cucumber --publish-quiet --strict
+      - run: bundler exec cucumber --publish-quiet --strict --tags 'not @go'
   dependent_test:
     strategy:
       fail-fast: false
