--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,7 +54,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.dependent.environment }} $(go env GOPATH)/bin/aruba || \:
+      - run: "${{ matrix.dependent.environment }} $(go env GOPATH)/bin/aruba || :"
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
