--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,9 +35,11 @@ jobs:
         dependent:
           - directory: schemat
             build: cargo install --path .
+            fail: true
           - directory: stak
             build: cargo install stak && cargo install --path root
             environment: STAK_ROOT=$PWD
+            fail: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -54,7 +56,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: "${{ matrix.dependent.environment }} $(go env GOPATH)/bin/aruba || :"
+      - run: ${{ matrix.dependent.environment }} $(go env GOPATH)/bin/aruba || ${{ matrix.dependent.fail }}
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
