--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: go test
+      - run: go test -race -covermode atomic -coverprofile coverage.txt
   integration_test:
     runs-on: ubuntu-latest
     steps:
