--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,6 +12,10 @@ updates:
     directory: /
     schedule:
       interval: daily
+  - package-ecosystem: gitsubmodule
+    directory: /
+    schedule:
+      interval: daily
   - package-ecosystem: gomod
     directory: /
     schedule:
