--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,7 +42,7 @@ jobs:
             fail: true
           - directory: turtle-build
             build: cargo install --path .
-            fail: true
+            fail: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
