--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -64,7 +64,7 @@ jobs:
           --accept-status 200
           --accept-status 403
           http://localhost:4321/aruba-go/
-      - uses: raviqqe/muffy@main
+      - uses: raviqqe/muffy@v0.1.12
         with:
           url: http://localhost:4321/aruba-go/
           accept-status: 200,403
