--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: go test -race -covermode atomic -coverprofile coverage.txt
+      - run: go test -race -covermode atomic -coverprofile coverage.txt ./...
   integration_test:
     runs-on: ubuntu-latest
     steps:
