--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,14 +53,11 @@ jobs:
         dependent:
           - directory: schemat
             build: cargo install --path .
-            fail: false
           - directory: stak
             build: cargo install stak && cargo install --path root
             environment: STAK_ROOT=$PWD
-            fail: true
           - directory: turtle-build
             build: cargo install --path .
-            fail: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -77,7 +74,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.dependent.environment }} agoa || ${{ matrix.dependent.fail }}
+      - run: ${{ matrix.dependent.environment }} agoa
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
