--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 0
       - uses: raviqqe/goreleaser-action@v1
         with:
-          version: 0.1.3
+          version: v0.1.4
           snapshot: ${{ github.ref != 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
