--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
         run: echo version=$(go run ./cmd/agoa --version) >> ${{ github.output }}
       - uses: raviqqe/goreleaser-action@v1
         with:
-          version: v${{ setup.outputs.version }}
+          version: v${{ steps.setup.outputs.version }}
           snapshot: ${{ github.ref != 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
