--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,9 +13,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - id: setup
+        run: echo version=$(go run ./cmd/agoa --version) >> ${{ github.output }}
       - uses: raviqqe/goreleaser-action@v1
         with:
-          version: v0.1.5
+          version: v${{ steps.setup.outputs.version }}
           snapshot: ${{ github.ref != 'refs/heads/main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
