--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,7 @@ jobs:
           - directory: stak
             build: cargo install stak && cargo install --path root
             environment: STAK_ROOT=$PWD
+            tags: ~@niche
           - directory: turtle-build
             build: cargo install --path .
     runs-on: ubuntu-latest
@@ -74,7 +75,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.dependent.environment }} agoa
+      - run: ${{ matrix.dependent.environment }} agoa ${{ matrix.tags && format('--tags {}', matrix.tags) || '' }}
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
