--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,8 +55,9 @@ jobs:
             build: cargo install --path .
           - directory: stak
             build: cargo install stak && cargo install --path root
-            environment: STAK_ROOT=$PWD
-            tags: ~@niche
+            environment: >
+              PATH=$PWD/target/release_test:$PATH
+              STAK_ROOT=$PWD
           - directory: turtle-build
             build: cargo install --path .
     runs-on: ubuntu-latest
@@ -75,7 +76,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.environment }} bundler exec cucumber
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.dependent.environment }} agoa ${{ matrix.dependent.tags && format('-t {}', matrix.dependent.tags) || '' }}
+      - run: ${{ matrix.dependent.environment }} agoa
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
