--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -57,9 +57,7 @@ jobs:
             build: |
               cargo install stak
               cargo build --profile release_test
-            environment: >
-              PATH=$PWD/target/release_test:$PATH
-              STAK_ROOT=$PWD
+            environment: STAK_ROOT=$PWD
           - directory: turtle-build
             build: cargo install --path .
     runs-on: ubuntu-latest
