--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,19 +62,17 @@ jobs:
               - STAK_ROOT=$PWD
           - directory: turtle-build
             build: cargo install --path .
-        run:
-          - bundler exec cucumber
-          - agoa
+        command:
+          - install: gem install --user cucumber
+            run: cucumber
+          - install: go install ./cmd/agoa
+            run: agoa
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
         with:
           submodules: true
-      - uses: actions/setup-go@v6
-        with:
-          go-version: stable
-      - uses: ruby/setup-ruby@v1
-      - run: go install ./cmd/agoa
+      - run: ${{ matrix.command.install }}
       - run: |
           for variable in ${{ join(matrix.dependent.environment, ' ') }}; do
             echo $variable >> ${{ github.env }}
@@ -82,7 +80,7 @@ jobs:
         working-directory: dependents/${{ matrix.dependent.directory }}
       - run: ${{ matrix.dependent.build }}
         working-directory: dependents/${{ matrix.dependent.directory }}
-      - run: ${{ matrix.run }}
+      - run: ${{ matrix.command.install }}
         working-directory: dependents/${{ matrix.dependent.directory }}
   test:
     needs:
