--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -72,6 +72,7 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: true
+      - uses: ruby/setup-ruby@v1
       - run: ${{ matrix.command.install }}
       - run: |
           for variable in ${{ join(matrix.dependent.environment, ' ') }}; do
