--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -63,10 +63,7 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: true
-      - uses: actions/setup-go@v6
-        with:
-          go-version: stable
-      - uses: ruby/setup-ruby@v1
+      - uses: ./github/actions/setup
       - run: go install ./cmd/agoa
       - run: |
           for variable in ${{ join(matrix.dependent.environment, ' ') }}; do
