--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,13 +26,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: ./github/actions/setup
+      - uses: ./.github/actions/setup
       - run: bundler exec cucumber --strict --tags 'not @go'
   integration_failure_test_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: ./github/actions/setup
+      - uses: ./.github/actions/setup
       - run: >
           bundler exec cucumber --strict --tags 'not @go' failures |
           tee /dev/stderr |
@@ -63,7 +63,7 @@ jobs:
       - uses: actions/checkout@v5
         with:
           submodules: true
-      - uses: ./github/actions/setup
+      - uses: ./.github/actions/setup
       - run: go install ./cmd/agoa
       - run: |
           for variable in ${{ join(matrix.dependent.environment, ' ') }}; do
